Update backend chức năng hiển thị, chỉnh sửa, upload avatar profile và change password